--- a/book-give-away/src/main/resources/templates/bundles.html
+++ b/book-give-away/src/main/resources/templates/bundles.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bundles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Roboto:ital,wght@0,500;&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Roboto:ital,wght@0,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div th:insert="~{parts/header :: header}"></div>
