--- a/book-give-away/src/main/resources/static/css/bundles.css
+++ b/book-give-away/src/main/resources/static/css/bundles.css
@@ -33,3 +33,9 @@
     font-size: 16px;
 }
 
+.card-vertical .titolo {
+    color: firebrick;
+    text-decoration: underline;
+    background-color: inherit;
+}
+
