--- a/book-angular-spa/src/app/header/header.component.html
+++ b/book-angular-spa/src/app/header/header.component.html
@@ -6,6 +6,7 @@
             <li><a href="#" routerLink="/home">Home</a></li>
             <li><a href="#" routerLink="/crea">Crea bundle</a></li>
             <li><a href="#" routerLink="/guarda">Guarda i bundle</a></li>
+            <li><a href="#" routerLink="/elenco/0">Elenco</a></li>
         </ul>
     </nav>
 </header>
